--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app>
     <security-role>
         <description></description >
-        <role-name>admin</role-name>
+        <role-name>manage</role-name>
     </security-role>
     <security-constraint>
         <display-name>WebMarket Security_01</display-name>
@@ -15,7 +15,7 @@
         </web-resource-collection>
         <auth-constraint>
             <description>권한 관리자명</description>
-            <role-name>admin</role-name>
+            <role-name>manage</role-name>
         </auth-constraint>
     </security-constraint>
     <login-config>
